# PieceOfCode

./: db.sqlite3  manage.py  pyproject.toml
PieceOfCode/: asgi.py  settings.py  urls.py  wsgi.py
base/: admin.py  models.py
base/migrations/: 0001_initial.py
base/templates/base/: index.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
theme/templates/: base.html
